# Python_Scripts

./: .gitignore  change_extension.py  mongorestore.py  pyproject.toml  search_word_file.py  subir_backup.py
fluxo_caixa/: achar_divergencias_fluxo_caixa.py  achar_parcela_errada.py  config.py  config.sample.json  fluxo_caixa_api.py  fluxo_caixa_processor.py  main.py  parcelas_processor.py
fluxo_caixa/database/: mongo_handler.py  sqlite_handler.py
fluxo_caixa/drivers/: selenium_handler.py
fluxo_caixa/drivers/helpers/: selenium_driver.py
fluxo_caixa/requests/: fluxo_caixa_api.py
fluxo_caixa/utils/: logger.py
utils/: handlefiles.py  mongosubprocessutils.py  mongoutils.py  ziputils.py
